--- a/src/public/sign-up.html
+++ b/src/public/sign-up.html
@@ -1,1 +1,52 @@
-<h1 id="menu-categories-title" class="text-center">Sign Up</h1>
+<h1>Sign Up For Our NewsLetter</h1>
+
+    <fieldset>
+      <legend>Registration</legend>
+      <form name='regForm' novalidate>
+
+        <input type="text" name="username" placeholder="Pick a username"
+          ng-model="signUpCtrl.user.username"
+          required
+          minlength="4"
+          ng-maxlength="10">
+          {{ signUpCtrl.user.username }}
+          <span
+            ng-if="(regForm.username.$error.minlength || regForm.username.$error.required) && regForm.username.$touched">
+            Username must be at least 4 characters long
+          </span>
+          <span ng-if="regForm.username.$error.maxlength && regForm.username.$touched">
+            Username must not be longer than 10 characters
+          </span>
+          <br>
+
+        <input type="email" name="email" placeholder="Email"
+          ng-model="signUpCtrl.user.email"
+          required>
+          <span ng-if="regForm.email.$invalid && regForm.email.$touched">
+            Must be a valid email address: handle@domain format
+          </span>
+          <br>
+
+        <input type="text" name="phone" placeholder="Phone ###-###-####"
+          ng-model="signUpCtrl.user.phone"
+          pattern="(\d{3})-(\d{3})-(\d{4})">
+          <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
+            Phone must be in the format ###-###-####.
+          </span>
+          <br>
+
+        <button
+          ng-disabled="regForm.$invalid"
+          ng-click="signUpCtrl.submit()">Submit</button>
+
+          <div style="margin-top: 10px;">
+            Form valid? {{ regForm.$valid }}
+          </div>
+      </form>
+    </fieldset>
+
+    <div id="info" ng-if="signUpCtrl.completed">
+      Username: {{ signUpCtrl.user.username}} <br>
+      Email: {{ signUpCtrl.user.email}} <br>
+      Phone: {{ signUpCtrl.user.phone }}
+    </div>
