--- a/src/public/signup/sign-up.html
+++ b/src/public/signup/sign-up.html
@@ -1,52 +1,46 @@
-<h1>Sign Up For Our NewsLetter</h1>
+<div class="container">
+  <h2 class="text-center">Sign Up For Our NewsLetter</h2>
 
-    <fieldset>
-      <legend>Registration</legend>
-      <form name='regForm' novalidate>
+  <div ng-if="signUpCtrl.submitted">Your information has been saved</div>
 
-        <input type="text" name="username" placeholder="Pick a username"
-          ng-model="signUpCtrl.user.username"
-          required
-          minlength="4"
-          ng-maxlength="10">
-          {{ signUpCtrl.user.username }}
-          <span
-            ng-if="(regForm.username.$error.minlength || regForm.username.$error.required) && regForm.username.$touched">
-            Username must be at least 4 characters long
+  <form name="regForm" novalidate>
+  <div class="form-group">
+    <label for="firstName">First name</label>
+    <input type="text" class="form-control" name="firstName" placeholder="First name" required ng-model="signUpCtrl.info.firstName">
+    <span ng-if="regForm.firstName.$invalid && regForm.firstName.$touched">
+       First name is required
+     </span>
+  </div>
+  <div class="form-group">
+    <label for="lastName">Last name</label>
+    <input type="text" class="form-control" name="lastName" placeholder="Last name" required ng-model="signUpCtrl.info.lastName">
+    <span ng-if="regForm.lastName.$invalid && regForm.lastName.$touched">
+       Last name is required
+     </span>
+  </div>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" name="email" placeholder="Email address" required ng-model="signUpCtrl.info.email">
+    <span ng-if="regForm.email.$invalid && regForm.email.$touched">
+       Must be a valid email address: handle@domain format
+     </span>
+  </div>
+  <div class="form-group">
+    <label for="phone">Phone number</label>
+    <input type="text" class="form-control" name="phone" placeholder="Phone number ###-###-####"
+      pattern="(\d{3})-(\d{3})-(\d{4})" ng-model="signUpCtrl.info.phone">
+      <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
+              Phone must be in the format ###-###-####
+            </span>
+  </div>
+  <div class="form-group">
+    <label for="favorite">Favorite dish</label>
+    <input type="text" class="form-control" name="favorite" placeholder="Favorite dish" ng-model="signUpCtrl.info.favorite"
+      ng-blur="signUpCtrl.validateFav()">
+    <span ng-if="signUpCtrl.invalidFavorite">
+            No such menu number exists
           </span>
-          <span ng-if="regForm.username.$error.maxlength && regForm.username.$touched">
-            Username must not be longer than 10 characters
-          </span>
-          <br>
-
-        <input type="email" name="email" placeholder="Email"
-          ng-model="signUpCtrl.user.email"
-          required>
-          <span ng-if="regForm.email.$invalid && regForm.email.$touched">
-            Must be a valid email address: handle@domain format
-          </span>
-          <br>
-
-        <input type="text" name="phone" placeholder="Phone ###-###-####"
-          ng-model="signUpCtrl.user.phone"
-          pattern="(\d{3})-(\d{3})-(\d{4})">
-          <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
-            Phone must be in the format ###-###-####.
-          </span>
-          <br>
-
-        <button
-          ng-disabled="regForm.$invalid"
-          ng-click="signUpCtrl.submit()">Submit</button>
-
-          <div style="margin-top: 10px;">
-            Form valid? {{ regForm.$valid }}
-          </div>
-      </form>
-    </fieldset>
-
-    <div id="info" ng-if="signUpCtrl.completed">
-      Username: {{ signUpCtrl.user.username}} <br>
-      Email: {{ signUpCtrl.user.email}} <br>
-      Phone: {{ signUpCtrl.user.phone }}
-    </div>
+  </div>
+  <button type="submit" class="btn btn-default" ng-disabled="regForm.$invalid" ng-click="signUpCtrl.submit()">Submit</button>
+</form>
+</div>
