filling my info html and closing service ife

--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -1,1 +1,29 @@
-<h1 id="menu-categories-title" class="text-center">My Info</h1>
+<div class="container">
+  <h2 class="text-center">Here Is Your User Information</h2>
+  
+  <table>
+  <tr>
+    <th>Info</th>
+    <th>User Details:</th> 
+  </tr>
+  <tr>
+    <td>First Name:</td>
+    <td>{{myInfoCtrl.info.firstName}}</td> 
+  </tr>
+  <tr>
+    <td>Last Name:</td>
+    <td>{{myInfoCtrl.info.lastName}}</td> 
+  </tr>
+  <tr>
+    <td>Email Add:</td>
+    <td>{{myInfoCtrl.info.email}}</td> 
+  </tr>
+  <tr>
+    <td>Phone:</td>
+    <td>{{myInfoCtrl.info.email}}</td> 
+  </tr>
+  <tr>
+    <td>Favourite Meal:</td>
+    <td>{{myInfoCtrl.info.favorite}}</td> 
+  </tr>
+</table>
