--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="text-center">Here Is Your User Information</h2>
   
-  <table>
+  <table class="text-center">
   <tr>
     <th>Info</th>
     <th>User Details:</th> 
@@ -26,7 +26,7 @@
 
 <div>
     <h2 class="text-center">Here Is Your Favorite Meal</h2>
-  <menu-item
+  <menu-item class="text-center"
              menu-item="myInfoCtrl.menuItem">
   </menu-item>
 </div>
