--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h2 class="text-center">Here Is Your User Information</h2>
   
-  <table class="text-center">
+  <table>
   <tr>
     <th>Info</th>
     <th>User Details:</th> 
@@ -20,7 +20,7 @@
   </tr>
   <tr>
     <td>Phone:</td>
-    <td>{{myInfoCtrl.info.email}}</td> 
+    <td>{{myInfoCtrl.info.phone}}</td> 
   </tr>
 </table>
 
