--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h2 class="text-center">Here Is Your User Information</h2>
   
-  <div ng-if="!myInfoCtrl.info">Not Signed Up Yet. <a ui-sref="public.signup">Sign up Now!</a></div>
-  <div ng-if="myInfoCtrl.info">
+  <div ng-if="!myInfoCtrl.isMember">Not Signed Up Yet. <a ui-sref="public.signup">Sign up Now!</a></div>
+  <div ng-if="myInfoCtrl.isMember">
 
   <table>
   <tr>
