--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -29,7 +29,7 @@
 </table>
 
 <div>
-    <h2 class="text-center">Here Is Your Favorite Meal</h2>
+    <h2 class="menu-center">Here Is Your Favorite Meal</h2>
   <menu-item class="text-center"
              menu-item="myInfoCtrl.menuItem">
   </menu-item>
