--- a/src/public/myinfo/my-info.html
+++ b/src/public/myinfo/my-info.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="text-center">Here Is Your User Information</h2>
+  <h2 class="menu-center">Here Is Your User Information</h2>
   
   <div ng-if="!myInfoCtrl.isMember">Not Signed Up Yet. <a ui-sref="public.signup">Sign up Now!</a></div>
   <div ng-if="myInfoCtrl.isMember">
@@ -30,7 +30,7 @@
 
 <div>
     <h2 class="menu-center">Here Is Your Favorite Meal</h2>
-  <menu-item class="text-center"
+  <menu-item class="menu-center"
              menu-item="myInfoCtrl.menuItem">
   </menu-item>
 </div>
